--- a/Trabalho 2/bin/.gitignore
+++ b/Trabalho 2/bin/.gitignore
@@ -8,3 +8,9 @@
 /telaAdm/
 /.classpath
 /.project
+/telaCarrinho/
+/telaHddSdd/
+/telaProcessador/
+/telaPlacaVideo/
+/telaMemoriaRam/
+/telaPerifericos/
