--- a/Trabalho 2/src/telaHomePage/.gitignore
+++ b/Trabalho 2/src/telaHomePage/.gitignore
@@ -1,1 +1,6 @@
 /TelaHomePage.class
+/TelaHomePage$1.class
+/TelaHomePage$2.class
+/TelaHomePage$3.class
+/TelaHomePage$4.class
+/TelaHomePage$5.class
